faster termination; uninstall