@@ -1,19 +1,49 @@
 package mobi.pruss.force2sd;
 
+import java.io.BufferedReader;
 import java.io.DataOutputStream;
+import java.io.DataInputStream;
+import java.io.InputStreamReader;
+
 import android.util.Log;
 
 public class Root {
 	private DataOutputStream rootCommands;
 	private Process rootShell;
 
-	public Root() {
+	public Root() {		
 		try {
-			rootShell = Runtime.getRuntime().exec("su");
+			rootShell = new ProcessBuilder() 
+				.command("su")
+				.redirectErrorStream(true)
+				.start();
 			rootCommands = new DataOutputStream(rootShell.getOutputStream());
 		}
 		catch (Exception e) {
 			rootCommands = null;
+		}
+	}
+	
+	public boolean execOne(String s, String successMarker) {
+		try {
+			DataInputStream rootOutput = new DataInputStream(rootShell.getInputStream());
+			BufferedReader br = new BufferedReader(new InputStreamReader(rootOutput));
+			rootCommands.writeBytes(s + "\n");
+			rootCommands.close();
+			String line;
+			while((line=br.readLine())!=null) {
+				Log.v("Root", line);
+				if (line.trim().matches(successMarker)) {
+					br.close();
+					Log.v("Root", successMarker);
+					return true;
+				}
+			}
+			return false;
+		}
+		catch (Exception e) {
+			Log.e("Error executing",s);
+			return false;
 		}
 	}
 	
@@ -46,6 +76,15 @@ public class Root {
 			catch (Exception e) {
 			}
 			rootCommands = null;
+		}
+
+		if (rootShell != null) {
+			try {
+					rootShell.destroy();
+			}
+			catch (Exception e) {
+			}
+			rootShell = null;
 		}
 	}
 	
